fix: :bug: Footer z-index

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -8,6 +8,7 @@
     padding: 20px;
     background-color: #f0f0f0;
     height: 64px;
+    z-index: 20;
 
     a,
     button {
